--- a/public/editing.css
+++ b/public/editing.css
@@ -56,7 +56,8 @@ textarea{
 form button {
     background-color: #ffb6b6;
     color: #7C00FE;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
+    border: none;
     padding: 0.5rem 1rem;
     border-radius: 4px;
     cursor: pointer;
@@ -71,7 +72,7 @@ form button:hover {
 button {
     background-color: #ffb6b6;
     color: #7C00FE;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     padding: 0.5rem 1rem;
     border-radius: 4px;
     cursor: pointer;
