--- a/public/css/editing.css
+++ b/public/css/editing.css
@@ -26,7 +26,6 @@ form {
     flex-direction: column;
     align-items: center;
 }
-
 form label {
     display: flex;
     flex-direction: column;
@@ -35,16 +34,8 @@ form label {
     width: 100%;
 }
 
-form input {
-    padding: 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    margin-top: 0.5rem;
-    font-size: 1rem;
-    width: 100%;
-}
-
-textarea{
+form input,
+textarea {
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -56,30 +47,13 @@ textarea{
 form button {
     background-color: #ffb6b6;
     color: #7C00FE;
-    /*border: 1px solid black;*/
     border: none;
     padding: 0.5rem 1rem;
     border-radius: 4px;
     cursor: pointer;
     transition: all 0.3s ease;
 }
-
 form button:hover {
-    background-color: #fdbcbc;
-    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.15);
-}
-
-button {
-    background-color: #ffb6b6;
-    color: #7C00FE;
-    /*border: 1px solid black;*/
-    padding: 0.5rem 1rem;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-button:hover{
     background-color: #fdbcbc;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.15);
 }
@@ -90,80 +64,20 @@ button:hover{
     margin-bottom: 1rem;
 }
 
-fieldset {
-    border: none;
-    margin: 1rem 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: start;
-    gap: 1rem;
-}
-
-legend {
-    font-size: 1rem;
-    margin-bottom: 0.5rem;
-    padding-right: 1rem;
-}
-
-label {
-    font-size: 1rem;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-}
-
-input[type="radio"] {
-    margin: 0;
-    padding: 0;
-}
-
-
-
-@media (max-width: 768px) {
+@media (max-width: 480px) {
     .main-content {
         width: 90%;
-        padding: 1rem 1.5rem;
+        padding: 1rem;
     }
-
-    h1 {
-        font-size: 1.2rem;
-    }
-
     form label {
         font-size: 0.95rem;
     }
-
-    form input, textarea {
+    form input,
+    textarea {
         font-size: 0.95rem;
     }
-
     form button {
         font-size: 0.95rem;
         padding: 0.4rem 0.8rem;
-    }
-}
-
-@media (max-width: 480px) {
-    .main-content {
-        padding: 1rem;
-    }
-
-    h1 {
-        font-size: 1rem;
-    }
-
-    form label {
-        font-size: 0.9rem;
-    }
-
-    form input, textarea {
-        font-size: 0.9rem;
-    }
-
-    form button {
-        font-size: 0.9rem;
-        padding: 0.3rem 0.6rem;
     }
 }
