--- a/public/css/start.css
+++ b/public/css/start.css
@@ -1,10 +1,10 @@
-body
-{
+body {
     font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-.main
-{
+.main {
     background: linear-gradient(to bottom, #C4FCF0, #2bbf9b);
     width: 100%;
     height: 100%;
@@ -18,8 +18,7 @@ body
     gap: 50px;
 }
 
-.button
-{
+.button {
     font-size: 40px;
     width: 200px;
     height: 80px;
@@ -42,11 +41,9 @@ body
     0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
-.left
-{
+.left {
     width: 500px;
     height: 500px;
-    border-width: 1px;
     font-size: 40px;
     color: #7C00FE;
     border-radius: 15px;
@@ -57,11 +54,9 @@ body
     padding: 30px;
 }
 
-.right
-{
+.right {
     width: 500px;
     height: 500px;
-    border-width: 1px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -91,13 +86,11 @@ body
         height: auto;
         position: static;
     }
-
     .left, .right {
         width: 80%;
         height: auto;
         margin: 0;
     }
-
     .button {
         font-size: 30px;
         width: 180px;
