--- a/public/css/editing.css
+++ b/public/css/editing.css
@@ -32,6 +32,7 @@ form label {
     font-size: 1rem;
     margin-bottom: 1rem;
     width: 100%;
+    align-items: center;
 }
 
 form input,
@@ -66,7 +67,6 @@ form button:hover {
     border-radius: 4px;
     cursor: pointer;
     transition: all 0.3s ease;
-    margin-right: 50px;
 }
 .back-btn:hover {
     background-color: #fdbcbc;
